# oif-aggregator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  instructions.md  rust-toolchain.toml  rustfmt.toml  todo.md
.cargo/: config.toml
.cursor/rules/: builder_pattern.mdc  quote_aggregation.mdc  rest_api.mdc  rust_standards.mdc  solver_adapter.mdc  storage.mdc
.github/: CODEOWNERS
.github/actions/oidc/: action.yaml
.github/workflows/: ci.yaml  deploy.yml  pages.yml  ui.yml
config/: config.example.json  config.json  default.json  development.json  production.json
crates/adapters/: Cargo.toml
crates/adapters/src/: across_adapter.rs  client_cache.rs  lib.rs  lifi_adapter.rs  mod.rs  oif_adapter.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  mod.rs  openapi.rs  pagination.rs  router.rs  security.rs  state.rs
crates/api/src/auth/: authenticators.rs  middleware.rs  mod.rs  rate_limit.rs
crates/api/src/handlers/: common.rs  health.rs  mod.rs  orders.rs  quotes.rs  solvers.rs
crates/config/: Cargo.toml
crates/config/src/: configurable_value.rs  lib.rs  loader.rs  mod.rs  settings.rs  startup_logger.rs
crates/service/: Cargo.toml
crates/service/src/: aggregator.rs  circuit_breaker.rs  integrity.rs  lib.rs  mod.rs  order.rs  solver.rs  solver_adapter.rs  solver_adapter_service.rs  solver_filter.rs  solver_repository.rs
crates/service/src/jobs/: generic_handler.rs  mod.rs  processor.rs  scheduler.rs  tests.rs  types.rs
crates/service/src/jobs/handlers/: bulk_solver_operations.rs  metrics_cleanup.rs  metrics_update.rs  mod.rs  order_status_monitor.rs  orders_cleanup.rs  solver_fetch_assets.rs  solver_health_check.rs  solvers_fetch_assets.rs  solvers_health_check.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory_store.rs  mod.rs  redis_store.rs  traits.rs
crates/types/: Cargo.toml
crates/types/src/: integrity.rs  lib.rs  test_utils.rs
crates/types/src/adapters/: config.rs  errors.rs  mod.rs  models.rs  response.rs  storage.rs  traits.rs
crates/types/src/auth/: errors.rs  implementations.rs  mod.rs  traits.rs
crates/types/src/circuit_breaker/: mod.rs
crates/types/src/constants/: limits.rs  mod.rs
crates/types/src/metrics/: mod.rs  time_series.rs
crates/types/src/models/: adapter_models.rs  asset.rs  asset_route.rs  health.rs  interop_address.rs  lock.rs  mod.rs  network.rs  secret_string.rs  u256.rs
crates/types/src/oif/: common.rs  mod.rs  v0.rs
crates/types/src/orders/: errors.rs  mod.rs  request.rs  response.rs  storage.rs
crates/types/src/quotes/: errors.rs  mod.rs  request.rs  response.rs  storage.rs
crates/types/src/solvers/: config.rs  errors.rs  mod.rs  response.rs  storage.rs
crates/types/src/storage/: errors.rs  mod.rs  traits.rs
demo/: .env.example  .gitignore  .prettierignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
demo/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
demo/src/components/: AssetSelect.tsx  CompactSetupSection.tsx  CustomWalletButton.tsx  HealthWidget.tsx  MyOrders.tsx  NetworkSelect.tsx  OrderStatus.tsx  OrderSubmission.tsx  Permit2ApprovalSection.tsx  QuoteCard.tsx  QuoteRequestForm.tsx  QuoteResults.tsx  RainbowKitWrapper.tsx  RecentSearchesModal.tsx  Settings.tsx  SimpleQuoteForm.test.tsx  SimpleQuoteForm.tsx  SolverDetail.tsx  SolverOptions.tsx  SolversList.tsx
demo/src/config/: wallet.ts
demo/src/contexts/: ThemeContext.tsx  WalletContext.tsx
demo/src/hooks/: useCompactSetup.ts  usePermit2Approval.ts
demo/src/services/: api.ts  localStorageService.ts  settingsService.ts  solverDataService.ts
demo/src/test/: setup.ts
demo/src/types/: api.ts  solverData.ts
demo/src/utils/: chainUtils.ts  compactSetup.ts  formToQuoteRequest.ts  interopAddress.ts  permit2Approval.ts  quoteSigner.ts
docs/: README.md  across-adapter.md  circuit-breaker.md  configuration.md  custom-adapters.md  docker.md  maintenance.md  oif-adapter.md  quick-start.md  quotes-and-aggregation.md  security.md
docs/api/: README.md  index.html  openapi.json
examples/: api_demo.rs  builder_demo.rs  config_conversion_demo.rs  custom_adapter_demo.rs  pluggable_storage.rs  quote_request_json.rs  simple_server.rs  simple_storage_demo.rs  startup_logging_demo.rs  storage_trait_demo.rs  trait_architecture_demo.rs  working_storage_demo.rs
examples/across-example/: README.md  config.json
examples/basic-example/: README.md  config.json  docker-compose.yml
scripts/: generate-openapi.sh  generate-quote-request.sh
scripts/order/: README.md  config.json  generate-order-request.sh  order-signer.sh
src/: lib.rs  main.rs  mocks.rs
src/adapters/: lifi_adapter.rs  mod.rs  oif_adapter.rs
src/api/: mod.rs  routes.rs
src/auth/: mod.rs  rate_limit.rs
src/config/: settings.rs
src/models/: mod.rs
src/models/adapters/: config.rs  errors.rs  mod.rs  response.rs  storage.rs
src/models/intents/: errors.rs  mod.rs  request.rs  response.rs  storage.rs
src/models/quotes/: errors.rs  mod.rs  request.rs  response.rs  storage.rs
src/models/solvers/: config.rs  errors.rs  mod.rs  response.rs  storage.rs
src/service/: aggregator.rs  mod.rs  quote.rs
src/storage/: memory_store.rs  mod.rs
tests/: adapter_test.rs  api_test.rs  builder_test.rs  circuit_breaker_e2e.rs  data_models_test.rs  e2e_modular.rs  e2e_test.rs  health_e2e.rs  metrics_e2e.rs  middleware_e2e.rs  orders_e2e.rs  quotes_e2e.rs  solver_options_e2e.rs  solvers_e2e.rs
tests/e2e/: health_tests.rs  middleware_tests.rs  mod.rs  orders_tests.rs  quotes_tests.rs  solver_options_tests.rs  timing_controlled_mocks.rs
tests/mocks/: adapters.rs  api_fixtures.rs  configs.rs  entities.rs  mod.rs  test_server.rs
