[workspace]
members = [
    "crates/types",
    "crates/service", 
    "crates/api",
    "crates/storage",
    "crates/adapters",
    "crates/config",
]
resolver = "2"

[package]
name = "oif-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
oif-types = { path = "crates/types" }
oif-config = { path = "crates/config" }
oif-service = { path = "crates/service" }
oif-storage = { path = "crates/storage" }
oif-adapters = { path = "crates/adapters" }
oif-api = { path = "crates/api" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
dotenvy = "0.15"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["limit", "timeout", "util"] }

[dev-dependencies]
tower = "0.5"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[features]
default = []
openapi = ["oif-api/openapi", "oif-types/openapi"]
