[package]
name = "oif-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
oif-types = { path = "../types", features = ["openapi"] }
oif-service = { path = "../service", features = ["openapi"] }
oif-storage = { path = "../storage" }
oif-config = { path = "../config" }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["limit", "cors", "compression-full", "trace", "request-id", "set-header"] }
tower = "0.5"
tracing = "0.1"
utoipa = { version = "5.0" }
utoipa-axum = { version = "0.2", optional = true }
utoipa-swagger-ui = { version = "9", optional = true, features = ["axum"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
async-trait = "0.1"
rand = "0.9"
uuid = { version = "1.18", features = ["v4"] }

[features]
openapi = ["utoipa-axum", "utoipa-swagger-ui"]
