[package]
name = "oif-service"
version = "0.1.0"
edition = "2021"

[dependencies]
oif-types = { path = "../types" }
oif-storage = { path = "../storage" }
oif-adapters = { path = "../adapters" }
oif-config = { path = "../config" }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
serde_json = "1.0"
