[package]
name = "oif-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
url = "2.5"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6.1"
base64 = "0.22"
rand = "0.9"
tracing = "0.1"
zeroize = { version = "1.8", features = ["derive"] }
utoipa = { version = "5.0", optional = true, features = ["chrono", "uuid"] }
hex = "0.4"

[features]
openapi = ["dep:utoipa"]
